# Lenia

./: CMakeLists.txt  CMakeSettings.json  README.md
res/: config.json  theme.qss
src/: CMakeLists.txt
src/graphics/: chartWidget.cpp  chartWidget.h  labelprogressbarpair.cpp  labelprogressbarpair.h
src/main/: CMakeLists.txt  app.cpp  app.h  common.h  common.h.in  configreader.cpp  configreader.h  misc.h  mymath.h  simulation.cpp  simulation.h  vc.cpp  vc.h
src/models/: solver.cpp  solver.h
